# rust-nuxt-server-middleware

./: README.md  nuxt.config.js  package.json
middleware/: README.md  package.json
middleware/lib/: index.js
middleware/native/: Cargo.toml
middleware/native/src/: lib.rs
src/pages/: index.vue
